tests/e2e/return_complex_expression_2.story
function name key:int returns int
	a = 0
	b = 0
	c = 0
	d = 0
	return a / b + c or d > 2
